{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "a41e8d39-08d2-42c4-bdee-6911c8e1121c",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "589d5c90-9e08-4ab7-b5e7-79312b4e587c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ActionX",
                    "type": "Button",
                    "id": "fa2deb5c-0186-4701-8a48-acdfd4400771",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Map Toggle",
                    "type": "Button",
                    "id": "b5b5552a-6a66-4891-aab8-2ddbc61172cc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Start",
                    "type": "Button",
                    "id": "6f6f6bd6-b958-4f4c-8dd7-33c73578e726",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Keyboard",
                    "id": "1341d3bf-f14d-486c-9243-9de7daad2a86",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5346f612-1529-4f97-98a8-cefe859e3592",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/stick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0904a86c-6cbd-4f0e-92d3-187de70ce004",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ab324bfe-d24f-4262-828e-1a525de374e3",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/stick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c5a0a728-8837-4a95-9ec8-75fd3d36a5a6",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/stick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e78851ee-91e5-4769-acc5-aff9367d3c4d",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ActionX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d05d27e8-8f9b-4d2b-841a-c657f754d59f",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/button8",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Map Toggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27b43495-2d8f-4cf1-ad0e-07df81f13e9a",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/button10",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}